# pre-commit-hooks

./: .bumpversion.toml  .envrc  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  justfile  pyproject.toml  pyrightconfig.json  pytest.toml  ruff.toml  script.py  test.sh
.gitea/workflows/: pull-request.yaml  push.yaml
docker/: Dockerfile
src/conformalize/: __init__.py  cli.py  constants.py  lib.py  logging.py  settings.py
src/qrt_pre_commit_hooks/: __init__.py  _click.py  _constants.py  _enums.py  _settings.py  _utilities.py  constants.py  secrets.json  settings.toml  utilities.py
src/qrt_pre_commit_hooks/configs/: Dockerfile  root.pem
src/qrt_pre_commit_hooks/hooks/: _add_qrt_hooks.py  _modify_ci_pull_request.py  _modify_ci_push.py  _modify_direnv.py  _modify_pre_commit.py  _modify_pyproject.py  _setup_docker.py  add_qrt_hooks.py  modify_ci_pull_request.py  modify_ci_push.py  modify_direnv.py  modify_pre_commit.py  modify_pyproject.py
src/tests/: test_cli.py  test_settings.py
src/tests/hooks/: test_modify_ci_pull_request.py  test_modify_ci_push.py  test_modify_direnv.py  test_modify_pre_commit.py  test_modify_pyproject.py
tests/: test_main.py
