[build-system]
  build-backend = "uv_build"
  requires = ["uv_build"]

[dependency-groups]
  dev = ["dycw-utilities[test]>=0.185.8", "pyright>=1.1.408", "rich>=14.2.0"]

[project]
  dependencies = [
    "click>=8.3.1",
    "dycw-pre-commit-hooks>=0.14.117",
    "dycw-utilities>=0.185.8",
  ]
  description = "Pre-commit hooks"
  name = "qrt-pre-commit-hooks"
  readme = "README.md"
  requires-python = ">= 3.13"
  version = "0.3.20"

  [project.optional-dependencies]
    cli = [
      "click==8.3.1",
      "dycw-pre-commit-hooks==0.14.117",
      "dycw-utilities==0.185.8",
    ]

  [project.scripts]
    add-qrt-hooks = "qrt_pre_commit_hooks.hooks.add_qrt_hooks:_main"
    modify-ci-pull-request = "qrt_pre_commit_hooks.hooks.modify_ci_pull_request:_main"
    modify-ci-push = "qrt_pre_commit_hooks.hooks.modify_ci_push:_main"
    modify-direnv = "qrt_pre_commit_hooks.hooks.modify_direnv:_main"
    modify-pre-commit = "qrt_pre_commit_hooks.hooks.modify_pre_commit:_main"
    modify-pyproject = "qrt_pre_commit_hooks.hooks.modify_pyproject:_main"

[tool]
  [tool.uv]
    [tool.uv.build-backend]
      module-name = "qrt_pre_commit_hooks"
      module-root = "src"

    [[tool.uv.index]]
      explicit = true
      name = "gitea"
      url = "https://qrt-bot:e43d1df41a3ecf96e4adbaf04e98cfaf094d253e@gitea.main:3000/api/packages/qrt/pypi/simple"

    [tool.uv.sources]
      backfill = { index = "gitea" }
      backtest = { index = "gitea" }
      database = { index = "gitea" }
      engine = { index = "gitea" }
      infra-utilities = { index = "gitea" }
      monitors = { index = "gitea" }
      mount = { index = "gitea" }
      nanode = { index = "gitea" }
      optimizer = { index = "gitea" }
      proxmox = { index = "gitea" }
      qrt-click = { index = "gitea" }
      qrt-ib-async = { index = "gitea" }
      qrt-polars = { index = "gitea" }
      qrt-redis = { index = "gitea" }
      qrt-slack = { index = "gitea" }
      qrt-types = { index = "gitea" }
      qrt-utilities = { index = "gitea" }
      signals = { index = "gitea" }
      test-package = { index = "gitea" }
      testing = { index = "gitea" }
